<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- listview下拉刷新      开始 -->
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <!-- listview下拉刷新      结束 -->

    <string name="app_name">U匠工人</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tip_1">您在维修管家App共接了10单,收入总额共1800.00元</string>
    <string name="tip_2">您在维修管家App平台共提现1500.00元,待审核共1800.00元</string>
    <string name="title_activity_my_message">MyMessageActivity</string>
    <string name="title_activity_dgstore">DGStoreActivity</string>
    <string name="tip1">上门服务费+维修人工服务费</string>
    <string name="tip2">请选择所需材料</string>
    <string name="tip3">请填写危险作业费，一般为高空作业</string>
    <string name="tip4">请填写其他费用</string>
    <string name="tip5">请填写意外保险费用</string>
    <string name="tip6">预计维修时长</string>
    <string name="tip7">请填写合计费用</string>
    <string name="title_activity_cash">CashActivity</string>
    <string name="title_activity_lable">LableActivity</string>
    <string name="new_order">您有新的订单，请抓紧时间抢单</string>
    <string name="start_work">您已被后台强制上班</string>
    <string name="end_work">您已被后台强制下班</string>
    <string name="no_pass">您提交的资料未通过审核，请重新上传</string>
    <string name="job_pass">您的工种修改已审核通过</string>
    <string name="cancel_pass">后台已同意您取消订单的申请</string>
    <string name="cancel_nopass">后台拒绝了您取消订单的申请</string>
    <string name="pay_order">订单已支付</string>
    <string name="cancel_order">客户已取消订单</string>
    <string name="systemorder">系統指派订单</string>
    <string name="storeOrderStart">商城订单发货成功</string>
    <string name="unusualLogin">您的账号已经异地登录</string>
    <string name="pass">您的资料已审核通过</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    
     <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

</resources>