<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical" >

    <include layout="@layout/layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_bar_height"
        android:layout_marginTop="10dp"
        android:background="@color/background_w"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="人工费用:"
            android:textColor="@color/text_color_bk"
            android:textSize="@dimen/common_text_size14" />

        <EditText
            android:id="@+id/et_fee1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/tip1"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textColorHint="#D0D0D0"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/orange"
            android:textSize="@dimen/common_text_size14" />
        
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_bar_height"
        android:layout_marginTop="1dp"
        android:background="@color/background_w"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="材料费用:"
            android:textColor="@color/text_color_bk"
            android:textSize="@dimen/common_text_size14" />

        <TextView
            android:id="@+id/tv_fee2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tip2"
            android:inputType="numberDecimal"
            android:gravity="center_vertical"
            android:lines="1"
            android:onClick="onClick"
            android:clickable="true"
            android:textColorHint="#D0D0D0"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/orange"
            android:textSize="@dimen/common_text_size14" />

        <ImageView
            android:layout_width="50dp"
            android:padding="17dp"
            android:layout_marginRight="10dp"
            android:layout_height="match_parent"
            android:src="@mipmap/down_arrow_g"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_bar_height"
        android:layout_marginTop="1dp"
        android:background="@color/background_w"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="危险作业:"
            android:textColor="@color/text_color_bk"
            android:textSize="@dimen/common_text_size14" />

        <EditText
            android:id="@+id/et_fee3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/tip3"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textColorHint="#D0D0D0"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/orange"
            android:textSize="@dimen/common_text_size14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_bar_height"
        android:layout_marginTop="1dp"
        android:background="@color/background_w"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="其他费用:"
            android:textColor="@color/text_color_bk"
            android:textSize="@dimen/common_text_size14" />

        <EditText
            android:id="@+id/et_fee4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/tip4"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textColorHint="#D0D0D0"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/orange"
            android:textSize="@dimen/common_text_size14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_bar_height"
        android:layout_marginTop="1dp"
        android:background="@color/background_w"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="意外保险:"
            android:textColor="@color/text_color_bk"
            android:textSize="@dimen/common_text_size14" />

        <EditText
            android:id="@+id/et_fee5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/tip5"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textColorHint="#D0D0D0"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/orange"
            android:textSize="@dimen/common_text_size14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_bar_height"
        android:layout_marginTop="10dp"
        android:background="@color/background_w"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="维修时长:"
            android:textColor="@color/text_color_bk"
            android:textSize="@dimen/common_text_size14" />

        <EditText
            android:id="@+id/et_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/tip6"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textColorHint="#D0D0D0"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/edittext_text"
            android:textSize="@dimen/common_text_size14" />

        <TextView
           android:layout_width="50dp"
           android:gravity="center"
           android:layout_height="match_parent"
           android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
           android:text="(小时)"
           android:textColor="@color/text_color_g"
           android:textSize="@dimen/common_text_size14"
            android:id="@+id/textView11" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_bar_height"
        android:layout_marginTop="10dp"
        android:background="@color/background_w"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="合计费用"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="@dimen/common_text_size16" />

        <TextView
            android:id="@+id/tv_total_fee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:lines="1"
            android:gravity="center_vertical|right"
            android:textColorHint="#D0D0D0"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/orange"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sbumit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_submit_btn"
        android:layout_marginLeft="@dimen/border_15"
        android:layout_marginRight="@dimen/border_15"
        android:layout_marginTop="40dp"
        android:background="@drawable/submit_bg3"
        android:onClick="onClick"
        android:text="提  交"
        android:textSize="16sp"
        android:textColor="#FFFFFFFF" />

</LinearLayout>